Adds EOI VM software install instructions
Adds required installation steps to support EOI's postSOS and importer-service services.